infrastructure/modules/kubernetes/subnet.tf
resource "google_compute_subnetwork" "private" {
  project                  = "secret-device-372619" #var.gcp_project #"devops-372620"
  name                     = "private"
  ip_cidr_range            = "10.0.2.0/24"
  region                   = "us-central1"
  network                  = google_compute_network.kubernetes.id
  private_ip_google_access = true

  secondary_ip_range {
    range_name    = "k8s-pod-range"
    ip_cidr_range = "10.48.0.0/14"
  }
  secondary_ip_range {
    range_name    = "k8s-service-range"
    ip_cidr_range = "10.52.0.0/20"
  }
}
